[package]
name = "plainshare"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.17", features = ["derive"] }
fs_extra = "1.2.0"
toml = "0.5.8"
serde = { version = "1.0", features = ["derive"] }
markdown = "0.3.0"
rocket = "0.5.0-rc.2"
colored = "2.0.0"